Updated widget container to have an id of 'hubWidget' instead of a class.

--- a/widget.html
+++ b/widget.html
@@ -12,7 +12,7 @@
 
     <body style="background:#eee;">
         
-        <div class="hub-widget">
+        <div id="hubWidget">
 
             <div class="header">News</div>
 
