--- a/widget.html
+++ b/widget.html
@@ -8,6 +8,9 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="styles.css">
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script src="js/app.min.js"></script>
     </head>
 
     <body style="background:#eee;">
@@ -16,28 +19,7 @@
 
             <div class="header">News</div>
 
-            <ul>
-                <li>
-                    <p class="headline"><a href="#">Johns Hopkins sends two wrestlers to NCAA championship meet</a></p>
-                    <p class="pubdate">March 15, 2013</a></p>
-                </li>
-                <li>
-                    <p class="headline"><a href="#">Hub/Pix: Johns Hopkins in your pictures</a></p>
-                    <p class="pubdate">March 14, 2013</a></p>
-                </li>
-                <li>
-                    <p class="headline"><a href="#">Stem cells from fat show promise in treatment of brain cancer</a></p>
-                    <p class="pubdate">March 13, 2013</a></p>
-                </li>
-                <li>
-                    <p class="headline"><a href="#">Johns Hopkins to consider conference affiliation for men's lacrosse</a></p>
-                    <p class="pubdate">March 12, 2013</a></p>
-                </li>
-                <li>
-                    <p class="headline"><a href="#">JHU School of Education rises to No. 2 in U.S. News rankings</a></p>
-                    <p class="pubdate">March 11, 2013</a></p>
-                </li>
-            </ul>
+            <div class="content"></div>
 
             <div class="hubpower">
                 <a href="http://hub.jhu.edu"><img src="images/hubpower.gif" alt="Powered by the Hub" /></a>
