--- a/widget.html
+++ b/widget.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="dark.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script src="js/app.min.js"></script>
