Moved most HTML into hubWidget.js instead of being in the actual HTML file. This will allow clients to only have to place a little bit of HTML on their pages.

--- a/widget.html
+++ b/widget.html
@@ -15,17 +15,7 @@
 
     <body style="background:#eee;">
         
-        <div id="hubWidget">
-
-            <div class="header">News</div>
-
-            <div class="content"></div>
-
-            <div class="hubpower">
-                <a href="http://hub.jhu.edu"><img src="images/hubpower.gif" alt="Powered by the Hub" /></a>
-            </div>
-
-        </div>
+        <div id="hubWidget"></div>
 
     </body>
 
