--- a/widget.html
+++ b/widget.html
@@ -7,10 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="dark.css">
+        <link rel="stylesheet" href="light.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script src="js/app.min.js"></script>
+        <script src="js/app.min.js?v=1.0.2"></script>
     </head>
 
     <body style="background:#eee;">
