Added a count data attribute. Created a function to take care of compiling the final data object to send to the API.

--- a/widget.html
+++ b/widget.html
@@ -15,7 +15,7 @@
 
     <body style="background:#eee;">
         
-        <div id="hubWidget"></div>
+        <div id="hubWidget" data-title="News from the Hub" data-topics="health" data-count="10"></div>
 
     </body>
 
