--- a/widget.html
+++ b/widget.html
@@ -10,7 +10,14 @@
         <link rel="stylesheet" href="css/light.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script src="js/app.min.js?v=1.0.2"></script>
+        <script src="js/jquery.hubwidget.min.js?v=1.0.2"></script>
+        <script>
+        jQuery(document).ready(function ($) {
+            $("#hubWidget").hubWidget().css({
+                background: "#f00"
+            });
+        });
+        </script>
     </head>
 
     <body style="background:#eee;">
