--- a/widget.html
+++ b/widget.html
@@ -6,22 +6,12 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
         <link rel="stylesheet" href="css/light.css">
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script src="js/jquery.hubwidget.min.js?v=1.0.2"></script>
-        <script>
-        jQuery(document).ready(function ($) {
-            $("#hubWidget").hubWidget().css({
-                background: "#f00"
-            });
-        });
-        </script>
     </head>
 
     <body style="background:#eee;">
-        
+
+        <script src="js/hubwidget.min.js?v=1.0.4"></script>
         <div id="hubWidget" data-title="News from the Hub" data-topics="health, arts-sciences" data-count="10"></div>
 
     </body>
