--- a/tests/widgetCreator/index.html
+++ b/tests/widgetCreator/index.html
@@ -10,8 +10,8 @@
           <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
 
           <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-          <script src="../js/lib/hubJS.js?v=1.0.2"></script>
-          <script src="../js/custom/widgetCreator.js?v=1.0.4"></script>
+          <script src="../../js/lib/hubJS.js?v=1.0.2"></script>
+          <script src="../../js/custom/widgetCreator.js?v=1.0.4"></script>
           <script src="tests.js?v=1.0.9"></script>
      </head>
 
