Renamed files to be more namespaced when they are in the hub shared assets folder.

--- a/examples/widget.html
+++ b/examples/widget.html
@@ -6,12 +6,12 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/light.css">
+        <link rel="stylesheet" href="http://hub.jhu.edu/assets/shared/css/widget-light.css">
     </head>
 
     <body style="background:#eee;">
 
-        <script src="js/hubwidget.min.js?v=1.0.4"></script>
+        <script src="http://hub.jhu.edu/assets/shared/js/hubwidget.min.js"></script>
         <div id="hubWidget" data-title="News from the Hub" data-topics="health, arts-sciences" data-count="10"></div>
 
     </body>
