--- a/examples/plugin.html
+++ b/examples/plugin.html
@@ -6,11 +6,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
-        <link rel="stylesheet" href="css/light.css">
+        <link rel="stylesheet" href="http://hub.jhu.edu/assets/shared/css/widget-light.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script src="js/jquery.hubwidget.min.js?v=1.0.2"></script>
+        <script src="http://hub.jhu.edu/assets/shared/js/jquery.hubwidget.min.js"></script>
         <script>
         jQuery(document).ready(function ($) {
             $("#hubWidget").hubWidget().css({
