Removed css method from widget init.

--- a/examples/plugin.html
+++ b/examples/plugin.html
@@ -12,9 +12,7 @@
         <script src="http://hub.jhu.edu/assets/shared/js/jquery.hubwidget.min.js"></script>
         <script>
         jQuery(document).ready(function ($) {
-            $("#hubWidget").hubWidget().css({
-                background: "#ccc"
-            });
+            $("#hubWidget").hubWidget();
         });
         </script>
     </head>
