--- a/examples/widget.html
+++ b/examples/widget.html
@@ -11,7 +11,7 @@
 
     <body style="background:#eee;">
 
-        <script src="http://hub.jhu.edu/assets/shared/js/hubwidget.min.js"></script>
+        <script src="http://hub.jhu.edu/assets/shared/js/hubwidget.1.0.min.js"></script>
         <div id="hubWidget" data-title="News from the Hub" data-topics="health, arts-sciences" data-count="10"></div>
 
     </body>
