--- a/examples/plugin.html
+++ b/examples/plugin.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="http://hub.jhu.edu/assets/shared/css/widget-light.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script src="http://hub.jhu.edu/assets/shared/js/jquery.hubwidget.1.0.min.js"></script>
+        <script src="http://hub.jhu.edu/assets/shared/js/jquery.hubwidget.1.0.min.js?v=1.0.4"></script>
         <script>
         jQuery(document).ready(function ($) {
             $("#hubWidget").hubWidget();
