--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
     <body style="background:#eee;">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-        <script src="http://hub.jhu.edu/assets/shared/js/hubwidget.1.0.min.js"></script>
+        <script src="js/hubwidget.min.js"></script>
         <div id="hubWidget" data-title="News from the Hub" data-topics="health, arts-sciences" data-count="10"></div>
 
     </body>
