--- a/tests/widgetCreator/index.html
+++ b/tests/widgetCreator/index.html
@@ -9,10 +9,11 @@
           <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css" />
           <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
 
-          <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-          <script src="../../js/lib/hubJS.js?v=1.0.2"></script>
-          <script src="../../js/custom/widgetCreator.js?v=1.0.4"></script>
-          <script src="tests.js?v=1.0.9"></script>
+          <script src="../../js/lib/simplyAjax.js"></script>
+          <script src="../../js/custom/prototypes.js"></script>
+          <script src="../../js/custom/hubJS.abbrev.js"></script>
+          <script src="../../js/custom/widgetCreator.js?v=1.0.0"></script>
+          <script src="tests.js"></script>
      </head>
 
 <body>
