--- a/test/widgetCreator/index.html
+++ b/test/widgetCreator/index.html
@@ -11,7 +11,7 @@
      </head>
 
 <body>
-     <div id="hubWidget" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Cool stuff"></div>
+     <div id="hubWidget" data-version="0" data-key="" data-type="events" data-channels="" data-title="Cool stuff"></div>
      <script src="../../dist/js/widget.js"></script>
 </body>
 
