--- a/test/widgetCreator/index.html
+++ b/test/widgetCreator/index.html
@@ -6,20 +6,20 @@
           <title>hubWidget</title>
           <metaname="viewport"content="width=device-width">
           <!-- for websites with light colored backgrounds -->
-          <link rel="stylesheet" href="http://hub.jhu.edu/assets/shared/css/widget-light.css" />
+          <link rel="stylesheet" href="../../build/css/widget-light.css" />
 
      </head>
 
 <body>
-     <!--<div id="hubWidget" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Cool stuff"></div>
-     <script src="../../build/js/widget.js"></script>-->
-
      <div id="hubWidget" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Cool stuff"></div>
+     <script src="../../build/js/widget.js"></script>
+
+     <!-- <div id="hubWidget" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Cool stuff"></div>
      <script src="../../build/js/creatorExposed.js"></script>
      <script>
           var div = document.getElementById("hubWidget");
           new Widget(div);
-     </script>
+     </script> -->
 </body>
 
 </html>
