--- a/test/widgetCreator/index.html
+++ b/test/widgetCreator/index.html
@@ -11,7 +11,29 @@
      </head>
 
 <body>
-     <div id="hubWidget" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Cool stuff"></div>
+    <div class="testing one two three"></div>
+    <script>
+    if (!document.querySelectorAll) {
+      document.querySelectorAll = function(selectors) {
+        var style = document.createElement('style'), elements = [], element;
+        document.documentElement.firstChild.appendChild(style);
+        document._qsa = [];
+
+        style.styleSheet.cssText = selectors + '{x-qsa:expression(document._qsa && document._qsa.push(this))}';
+        window.scrollBy(0, 0);
+        style.parentNode.removeChild(style);
+
+        while (document._qsa.length) {
+          element = document._qsa.shift();
+          element.style.removeAttribute('x-qsa');
+          elements.push(element);
+        }
+        document._qsa = null;
+        return elements;
+      };
+    }</script>
+     <div class="hub-widget events" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Events"></div>
+     <!-- <div class="hub-widget articles" data-version="0" data-key="billcosby" data-type="articles" data-channels="" data-title="Articles"></div> -->
      <script src="../../build/js/widget.js"></script>
 
      <!-- <div id="hubWidget" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Cool stuff"></div>
@@ -20,6 +42,8 @@
           var div = document.getElementById("hubWidget");
           new Widget(div);
      </script> -->
+
+     <div class="testing one two three"></div>
 </body>
 
 </html>
