Added second div to test.

--- a/test/widgetCreator/index.html
+++ b/test/widgetCreator/index.html
@@ -33,7 +33,7 @@
       };
     }</script>
      <div class="hub-widget events" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Events"></div>
-     <!-- <div class="hub-widget articles" data-version="0" data-key="billcosby" data-type="articles" data-channels="" data-title="Articles"></div> -->
+     <div class="hub-widget articles" data-version="0" data-key="billcosby" data-type="articles" data-channels="" data-title="Articles"></div>
      <script src="../../build/js/widget.js"></script>
 
      <!-- <div id="hubWidget" data-version="0" data-key="billcosby" data-type="events" data-channels="" data-title="Cool stuff"></div>
