--- a/test/widgetCreator/index.html
+++ b/test/widgetCreator/index.html
@@ -11,7 +11,10 @@
   <body>
     <div class="hub-widget events" data-version="0" data-key="billcosby" data-type="events" data-featured="true" data-channels="" data-title="Events"></div>
     <div class="hub-widget articles" data-version="0" data-key="billcosby" data-type="articles" data-channels="" data-title="Articles"></div>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="../../build/js/widget.js"></script>
+
   </body>
 
 </html>
