--- a/test/widgetCreator/index.html
+++ b/test/widgetCreator/index.html
@@ -9,8 +9,8 @@
    </head>
 
   <body>
-    <div class="hub-widget events" data-version="0" data-key="billcosby" data-type="events" data-featured="true" data-channels="" data-title="Events"></div>
-    <div class="hub-widget articles" data-version="0" data-key="billcosby" data-type="articles" data-channels="" data-title="Articles"></div>
+    <div class="hub-widget events" data-version="0" data-key="" data-type="events" data-featured="true" data-channels="" data-title="Events"></div>
+    <div class="hub-widget articles" data-version="0" data-key="" data-type="articles" data-channels="" data-title="Articles"></div>
     <script src="../../build/js/widget.js"></script>
   </body>
 
